--- a/SolidsHoleOperationPresets/FunctionTable/Resource.resx
+++ b/SolidsHoleOperationPresets/FunctionTable/Resource.resx
@@ -125,7 +125,8 @@
     <value>assets\run24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="RunTip" xml:space="preserve">
-    <value>My NET-Hook Example</value>
+    <value>SHOP
+Solids Hole Operation Presets Editor</value>
     <comment>Access modifier is set to public which allows localization</comment>
   </data>
 </root>
